--- a/backend-Spring_Boot/fullstack/pom.xml
+++ b/backend-Spring_Boot/fullstack/pom.xml
@@ -65,8 +65,13 @@
 		</dependency>
 		<dependency>
 			<groupId>org.mapstruct</groupId>
-			<artifactId>mapstruct-parent</artifactId>
+			<artifactId>mapstruct-processor</artifactId>
 			<version>1.5.5.Final</version>
+		</dependency>
+		<dependency>
+			<groupId>com.auth0</groupId>
+			<artifactId>java-jwt</artifactId>
+			<version>4.3.0</version>
 		</dependency>
 	</dependencies>
 
