--- a/frondend_admin_flutter/pubspec.yaml
+++ b/frondend_admin_flutter/pubspec.yaml
@@ -30,11 +30,11 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  cupertino_icons: 1.0.2
 
+  dio: '5.3.2'
+  pretty_dio_logger: '1.3.1'
 
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
 
 dev_dependencies:
   flutter_test:
